--- a/mlops/homework_03/pipelines/data_preparation/metadata.yaml
+++ b/mlops/homework_03/pipelines/data_preparation/metadata.yaml
@@ -7,6 +7,7 @@ blocks:
       path: homework_03/data_loaders/ingest.py
   downstream_blocks:
   - summary_overview_for_ingest
+  - prepare
   executor_config: null
   executor_type: local_python
   has_callback: false
@@ -18,6 +19,24 @@ blocks:
   type: data_loader
   upstream_blocks: []
   uuid: ingest
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
+      path: homework_03/transformers/prepare.py
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: Prepare
+  retry_config: null
+  status: executed
+  timeout: null
+  type: transformer
+  upstream_blocks:
+  - ingest
+  uuid: prepare
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
@@ -40,6 +59,9 @@ spark_config: {}
 tags: []
 type: python
 uuid: data_preparation
+variables:
+  select_feature1: PULocationID
+  select_feature2: DOLocationID
 variables_dir: /home/src/mage_data/homework_03
 widgets:
 - all_upstream_blocks_executed: true
