Add transform block and a histogram (lecture 3.1.4-5)

--- a/mlops/homework_03/pipelines/data_preparation/metadata.yaml
+++ b/mlops/homework_03/pipelines/data_preparation/metadata.yaml
@@ -79,7 +79,7 @@ widgets:
   language: python
   name: summary overview for ingest
   retry_config: null
-  status: executed
+  status: failed
   timeout: null
   type: chart
   upstream_blocks:
