--- a/mlops/unit_1_data_preparation/pipelines/data_preparation/metadata.yaml
+++ b/mlops/unit_1_data_preparation/pipelines/data_preparation/metadata.yaml
@@ -11,6 +11,7 @@ blocks:
   - summary_overview_for_ingest
   - feature_profiles_for_ingest
   - ingest_time_series_bar_chart_s4
+  - prepare
   executor_config: null
   executor_type: local_python
   has_callback: false
@@ -22,6 +23,25 @@ blocks:
   type: data_loader
   upstream_blocks: []
   uuid: ingest
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
+      path: unit_1_data_preparation/transformers/prepare.py
+  downstream_blocks:
+  - prepare_histogram_t0
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: Prepare
+  retry_config: null
+  status: updated
+  timeout: null
+  type: transformer
+  upstream_blocks:
+  - ingest
+  uuid: prepare
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
@@ -45,6 +65,10 @@ spark_config: {}
 tags: []
 type: python
 uuid: data_preparation
+variables:
+  split_on_feature: lpep_pickup_datetime
+  split_on_feature_value: '2024-02-01'
+  target: duration
 variables_dir: /home/src/mage_data/unit_1_data_preparation
 widgets:
 - all_upstream_blocks_executed: true
@@ -175,3 +199,22 @@ widgets:
   upstream_blocks:
   - ingest
   uuid: ingest_time_series_bar_chart_s4
+- all_upstream_blocks_executed: false
+  color: null
+  configuration:
+    buckets: '20'
+    chart_type: histogram
+    x: x
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: prepare_histogram_t0
+  retry_config: null
+  status: executed
+  timeout: null
+  type: chart
+  upstream_blocks:
+  - prepare
+  uuid: prepare_histogram_t0
