--- a/mlops/homework_03/pipelines/data_preparation/metadata.yaml
+++ b/mlops/homework_03/pipelines/data_preparation/metadata.yaml
@@ -24,7 +24,8 @@ blocks:
   configuration:
     file_source:
       path: homework_03/transformers/prepare.py
-  downstream_blocks: []
+  downstream_blocks:
+  - train
   executor_config: null
   executor_type: local_python
   has_callback: false
@@ -37,6 +38,24 @@ blocks:
   upstream_blocks:
   - ingest
   uuid: prepare
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
+      path: homework_03/transformers/train.py
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: train
+  retry_config: null
+  status: updated
+  timeout: null
+  type: transformer
+  upstream_blocks:
+  - prepare
+  uuid: train
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
